# WhatAreYouDoing

./: .gitignore  DEMO_MODE.md  README.md  README_DEMO_QUICKSTART.md  SETUP.md  package-lock.json
firmware/esp32_firmware/: config.h.example  esp32_firmware.ino
server/: ai_analyzer.py  database.py  demo_mode.py  env.example  main.py  models.py  pyproject.toml
tests/: test_server.py
